# simple_todo_api

./: LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: main.yml  test_main.yml
app/: main.py  models.py  shelve_db.py
app/tests/: test_main.py  test_shelve.db.bak
