[tool.poetry]
name = "simple_todo_api"
version = "0.1.0"
description = ""
authors = ["Lucas Bellomo <lbellomo@gmail.com>"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

